ligolang/src/test/contracts/negative/parametric_types2.ligo
type foo(a) is a * a
type bar is foo(int,string)